[project]
name = "wandb-carbs"
version = "0.0.8"
description = "Integrates Imbue's Cost Aware pareto-Region Bayesian Search (CARBS) with Weights and Biases (WanDB)"
readme = "README.md"
authors = ["David Bloomin <daveey@gmail.com>"]
license = "MIT"
homepage = "https://daveey.github.io"
repository = "https://github.com/Metta-AI/wandb_carbs"
keywords = ["bayesian-optimization", "bayesian-search", "cost-aware", "pareto-region", "carbs", "wandb", "weights-and-biases"]
requires-python = ">=3.11,<3.12"
dependencies = [
    "wandb>=0.16",
    "pytest>=6.2.4",
    "carbs @ git+https://github.com/imbue-ai/carbs.git",
]
